# bam

benchmarks/array/: CMakeLists.txt  main.cu  settings.h
benchmarks/vectoradd/: CMakeLists.txt  main.cu  settings.h
include/: util.h
